real-project/colmap/test-lambda/classification_results/non_compilable/test_3.cpp.log
In file included from /home/lizhilin/compare-order/real-project/colmap/test-lambda/test_3.cpp:1:
In file included from /usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/x86_64-linux-gnu/c++/10/bits/stdc++.h:41:
In file included from /usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/cmath:1935:
In file included from /usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/specfun.h:45:
In file included from /usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/stl_algobase.h:64:
/usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/stl_pair.h:217:11: error: field has incomplete type 'TrackElement'
  217 |       _T1 first;                 ///< The first member
      |           ^
/home/lizhilin/compare-order/real-project/colmap/test-lambda/test_3.cpp:11:19: note: in instantiation of template class 'std::pair<TrackElement, std::basic_string<char>>' requested here
   11 |   return track_el1.second < track_el2.second;
      |                   ^
/home/lizhilin/compare-order/real-project/colmap/test-lambda/test_3.cpp:2:8: note: forward declaration of 'TrackElement'
    2 | struct TrackElement;
      |        ^
In file included from /home/lizhilin/compare-order/real-project/colmap/test-lambda/test_3.cpp:1:
In file included from /usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/x86_64-linux-gnu/c++/10/bits/stdc++.h:41:
In file included from /usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/cmath:1935:
In file included from /usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/specfun.h:45:
In file included from /usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/stl_algobase.h:64:
In file included from /usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/stl_pair.h:59:
In file included from /usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/move.h:57:
/usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/type_traits:1093:21: error: static assertion failed due to requirement 'std::__is_complete_or_unbounded(std::__type_identity<TrackElement>{})': template argument must be a complete class or an unbounded array
 1093 |       static_assert(std::__is_complete_or_unbounded(__type_identity<_Tp>{}),
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/type_traits:139:26: note: in instantiation of template class 'std::is_copy_assignable<TrackElement>' requested here
  139 |     : public conditional<_B1::value, _B2, _B1>::type
      |                          ^
/usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/stl_pair.h:391:3: note: in instantiation of template class 'std::__and_<std::is_copy_assignable<TrackElement>, std::is_copy_assignable<std::basic_string<char>>>' requested here
  391 |                 __and_<is_copy_assignable<_T1>,
      |                 ^
/home/lizhilin/compare-order/real-project/colmap/test-lambda/test_3.cpp:11:19: note: in instantiation of template class 'std::pair<TrackElement, std::basic_string<char>>' requested here
   11 |   return track_el1.second < track_el2.second;
      |                   ^
In file included from /home/lizhilin/compare-order/real-project/colmap/test-lambda/test_3.cpp:1:
In file included from /usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/x86_64-linux-gnu/c++/10/bits/stdc++.h:41:
In file included from /usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/cmath:1935:
In file included from /usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/specfun.h:45:
In file included from /usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/stl_algobase.h:64:
In file included from /usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/stl_pair.h:59:
In file included from /usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/move.h:57:
/usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/type_traits:1114:21: error: static assertion failed due to requirement 'std::__is_complete_or_unbounded(std::__type_identity<TrackElement>{})': template argument must be a complete class or an unbounded array
 1114 |       static_assert(std::__is_complete_or_unbounded(__type_identity<_Tp>{}),
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/type_traits:139:26: note: in instantiation of template class 'std::is_move_assignable<TrackElement>' requested here
  139 |     : public conditional<_B1::value, _B2, _B1>::type
      |                          ^
/usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/stl_pair.h:402:3: note: in instantiation of template class 'std::__and_<std::is_move_assignable<TrackElement>, std::is_move_assignable<std::basic_string<char>>>' requested here
  402 |                 __and_<is_move_assignable<_T1>,
      |                 ^
/home/lizhilin/compare-order/real-project/colmap/test-lambda/test_3.cpp:11:19: note: in instantiation of template class 'std::pair<TrackElement, std::basic_string<char>>' requested here
   11 |   return track_el1.second < track_el2.second;
      |                   ^
3 errors generated.
